feat: integrated fabric.js with Vue

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.bootcss.com/fabric.js/2.3.0/fabric.min.js"></script>
   </body>
 </html>
