feat: two-way bind tree view and tree json model

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://cdn.bootcss.com/fabric.js/2.3.0/fabric.min.js"></script>
+    <script src="https://unpkg.com/prettier@1.13.0/standalone.js"></script>
+    <script src="https://unpkg.com/prettier@1.13.0/parser-json.js"></script>
   </body>
 </html>
